--- a/config.json
+++ b/config.json
@@ -20,6 +20,6 @@
   "type": "application",
   "project_data": {
     "init_clone":
-        { "fetch": { "scm":"git", "url":"http://stash.wrs.com/scm/pubsdkex/vxw-cdemo-app.git" } }
+        { "fetch": { "scm":"git", "url":"git@github.com:wind-river-vxworks7/vxw-cdemo-app.git" } }
   }
 }
